[package]
name = "todo-tutorial"
version = "0.1.0"
authors = ["singthai <singthai@topglove.com.my>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
async-recursion = "1.1.1"
manganis = "0.2.2"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
